Drop jdk.incubator.mvt and MVT change from MethodHandle and reflection
Reviewed-by: acorn